--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MartinPdeS/TradeTide/blob/master/notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MartinPdeS/PackLab/blob/master/notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -22,35 +22,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lwOEi7pZMPIa",
-        "outputId": "a4936213-ce6d-41cd-b6d6-ccf6e71214d3"
+        "outputId": "5e316ed5-2557-4e9f-9958-61e71921e919"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.5/4.5 MB\u001b[0m \u001b[31m13.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m47.2/47.2 kB\u001b[0m \u001b[31m137.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.9/43.9 kB\u001b[0m \u001b[31m103.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.8/7.8 MB\u001b[0m \u001b[31m161.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m101.7/101.7 kB\u001b[0m \u001b[31m124.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m191.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m301.8/301.8 kB\u001b[0m \u001b[31m159.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m228.0/228.0 kB\u001b[0m \u001b[31m189.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.2/2.2 MB\u001b[0m \u001b[31m161.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m92.1/92.1 MB\u001b[0m \u001b[31m113.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement PackLab (from versions: none)\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[31mERROR: No matching distribution found for PackLab\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
           ]
         }
       ],
       "source": [
-        "!python -m pip install TradeTide --no-cache-dir --quiet"
+        "!python -m pip install PackLab --no-cache-dir --quiet"
       ]
     },
     {
@@ -59,8 +51,8 @@
         "id": "QYdt8JUqprps"
       },
       "source": [
-        "Experiment imports\n",
-        "------------------"
+        "imports\n",
+        "-------"
       ]
     },
     {
@@ -71,10 +63,7 @@
       },
       "outputs": [],
       "source": [
-        "import matplotlib.pyplot as plt\n",
-        "from TradeTide import Backtester, Strategy, Market, Currency, days, hours, minutes\n",
-        "from TradeTide.indicators import BollingerBands\n",
-        "from TradeTide import capital_management, exit_strategy"
+        "from PackLab import Domain, Options, Simulator, UniformRadiusSampler"
       ]
     },
     {
@@ -85,29 +74,21 @@
       },
       "outputs": [],
       "source": [
-        "market = Market()\n",
-        "\n",
-        "market.load_from_database(\n",
-        "    currency_0=Currency.CAD,\n",
-        "    currency_1=Currency.USD,\n",
-        "    time_span=100 * days,\n",
-        ")\n",
-        "\n",
-        "print(f\"Loaded {len(market.dates)} data points over {100} days\")"
+        "domain = Domain(\n",
+        "    length_x=6.0,\n",
+        "    length_y=6.0,\n",
+        "    length_z=6.0,\n",
+        "    use_periodic_boundaries=True\n",
+        ")"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "indicator = BollingerBands(\n",
-        "    window=3 * minutes,\n",
-        "    multiplier=2.0\n",
-        ")\n",
-        "\n",
-        "indicator.run(market)\n",
-        "\n",
-        "strategy = Strategy()\n",
-        "strategy.add_indicator(indicator)"
+        "radius_sampler = UniformRadiusSampler(\n",
+        "    minimum_radius=0.15,\n",
+        "    maximum_radius=0.15\n",
+        ")"
       ],
       "metadata": {
         "id": "w8Wa8vBgczyT"
@@ -118,18 +99,12 @@
     {
       "cell_type": "code",
       "source": [
-        "exit_strat = exit_strategy.Static(\n",
-        "    stop_loss=4,\n",
-        "    take_profit=4,\n",
-        "    save_price_data=True\n",
-        ")\n",
-        "\n",
-        "capital_mgmt = capital_management.FixedLot(\n",
-        "    capital=1_000_000,\n",
-        "    fixed_lot_size=10_000,\n",
-        "    max_capital_at_risk=100_000,\n",
-        "    max_concurrent_positions=100,\n",
-        ")"
+        "options = Options()\n",
+        "options.random_seed = 123\n",
+        "options.maximum_attempts = 2_500_000\n",
+        "options.maximum_consecutive_rejections = 50_000\n",
+        "options.target_packing_fraction = 0.50\n",
+        "options.minimum_center_separation_addition = 0.0"
       ],
       "metadata": {
         "id": "FCLFUeSpc4RD"
@@ -140,14 +115,13 @@
     {
       "cell_type": "code",
       "source": [
-        "backtester = Backtester(\n",
-        "    strategy=strategy,\n",
-        "    exit_strategy=exit_strat,\n",
-        "    market=market,\n",
-        "    capital_management=capital_mgmt,\n",
+        "rsa_simulator = Simulator(\n",
+        "    domain=domain,\n",
+        "    radius_sampler=radius_sampler,\n",
+        "    options=options\n",
         ")\n",
         "\n",
-        "backtester.run()"
+        "result = rsa_simulator.run()"
       ],
       "metadata": {
         "id": "3WcZapBvc57z"
@@ -158,10 +132,29 @@
     {
       "cell_type": "code",
       "source": [
-        "backtester.print_performance()"
+        "result.plot_slice_2d(\n",
+        "    slice_axis=\"z\",\n",
+        "    slice_center_fraction=0.5,\n",
+        "    slice_thickness_fraction=0.08,\n",
+        "    maximum_circles_in_slice=2500,\n",
+        ")"
       ],
       "metadata": {
         "id": "tB855zlOc7SB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result.plot_pair_correlation(\n",
+        "    pair_correlation_bins=300,\n",
+        "    maximum_number_of_pairs=20_000_000\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "KCcdbVG3I07F"
       },
       "execution_count": null,
       "outputs": []
